--- a/src/module/OlcsSelfserve/config/translations.ini
+++ b/src/module/OlcsSelfserve/config/translations.ini
@@ -1,2 +1,20 @@
 ; this is an INI file
 [section]
+progress-bar-applicant-details=Applicant details
+progress-bar-type-of-licence=Type of licence
+progress-bar-your-business=Your business
+progress-bar-operating-centres=Operating centres
+progress-bar-transport-managers=Transport managers
+progress-bar-vehicle-safety="Vehicles & safety"
+progress-bar-previous-history=Previous history
+progress-bar-declaration="Undertakings & declaration"
+progress-bar-payment=Payment
+progress-bar-summary="Summary & submission"
+layout-footer-support=Support
+layout-footer-cookies=Cookies
+layout-footer-feedback=Feedback
+layout-footer-cymraeg=Cymraeg
+layout-footer-built-by-the=Built by the
+layout-footer-government-digital-service=Government digital service
+layout-footer-open-government-licence-statement="All content is available under the Open Government Licence, except where otherwise stated."
+layout-footer-disclaimer-statement="Hyperlinks are provided for your convenience only. We do not take responsibility for the reliability or content of linked websites. Neither does a hyperlink indicate endorsement of a particular website or organisation"
