--- a/src/module/OlcsSelfserve/config/translations.ini
+++ b/src/module/OlcsSelfserve/config/translations.ini
@@ -18,3 +18,10 @@ layout-footer-built-by-the=Built by the
 layout-footer-government-digital-service=Government digital service
 layout-footer-open-government-licence-statement="All content is available under the Open Government Licence, except where otherwise stated."
 layout-footer-disclaimer-statement="Hyperlinks are provided for your convenience only. We do not take responsibility for the reliability or content of linked websites. Neither does a hyperlink indicate endorsement of a particular website or organisation"
+your-business-header="Your business &hyphen; Type of business"
+your-business-type-of-business-header="Type of business:"
+your-business-company-details-header="Registered company details:"
+your-business-trading-names-header="Trading names:"
+your-business-types-of-business-header="Types of business:"
+common-button-save-and-next="Save and next"
+common-button-cancel=Cance;
