Modified controller and view routes to prepend “selfserve” Added translations for entity types Added entityTypes and countries array to parent OlcsForm

--- a/src/module/OlcsSelfserve/config/translations.ini
+++ b/src/module/OlcsSelfserve/config/translations.ini
@@ -24,4 +24,9 @@ your-business-company-details-header="Registered company details:"
 your-business-trading-names-header="Trading names:"
 your-business-types-of-business-header="Types of business:"
 common-button-save-and-next="Save and next"
-common-button-cancel=Cance;
+common-button-cancel=Cancel;
+registered-company=Registered Company
+sole-trader=Sole Trader
+partnership=Partnership
+public-authority=Public Authority
+other="Other/Charity/Trust & University"
