--- a/src/module/OlcsSelfserve/config/translations.ini
+++ b/src/module/OlcsSelfserve/config/translations.ini
@@ -18,3 +18,16 @@ layout-footer-built-by-the=Built by the
 layout-footer-government-digital-service=Government digital service
 layout-footer-open-government-licence-statement="All content is available under the Open Government Licence, except where otherwise stated."
 layout-footer-disclaimer-statement="Hyperlinks are provided for your convenience only. We do not take responsibility for the reliability or content of linked websites. Neither does a hyperlink indicate endorsement of a particular website or organisation"
+
+; Generic buttons and messages for forms
+mandatory-fields=Fields marked with * are mandatory
+savenext=Save & Next
+back=Back
+exit=Exit
+
+; Licence Type application page
+type-of-licence=Type of Licence
+operator-type=Operator type
+which-operator-location=Which location do you operate out of?
+which-operator-type=What type of operator are you?
+which-licence-type=What type of licence do you want to apply for?
