Added translations Removed form classes Added company name and number

--- a/src/module/OlcsSelfserve/config/translations.ini
+++ b/src/module/OlcsSelfserve/config/translations.ini
@@ -30,3 +30,12 @@ sole-trader=Sole Trader
 partnership=Partnership
 public-authority=Public Authority
 other="Other/Charity/Trust & University"
+your-business-form-label-type-of-business="What type of business are you?"
+your-business-form-label-registered-company-number="Registered company number:"
+your-business-form-instruction-company-number-text="Instructional text for company number"
+your-business-form-label-registered-company-name="Registered company name:"
+your-business-form-instruction-company-name-text="Instructional text for company name"
+your-business-form-label-trading name="Registered company number:"
+your-business-form-label-types-of-business="Select your business types from the list below:"
+
+
