Added Trading names and types of business rows Added translations

--- a/src/module/OlcsSelfserve/config/translations.ini
+++ b/src/module/OlcsSelfserve/config/translations.ini
@@ -24,18 +24,23 @@ your-business-company-details-header="Registered company details:"
 your-business-trading-names-header="Trading names:"
 your-business-types-of-business-header="Types of business:"
 common-button-save-and-next="Save and next"
-common-button-cancel=Cancel;
+common-button-cancel=Cancel
+common-button-find=Find
+common-button-add-another=Add another
+common-please-select=Please select
 registered-company=Registered Company
 sole-trader=Sole Trader
 partnership=Partnership
 public-authority=Public Authority
 other="Other/Charity/Trust & University"
+pre-selected-sic-code=Pre selected SIC code TO FIX
 your-business-form-label-type-of-business="What type of business are you?"
 your-business-form-label-registered-company-number="Registered company number:"
 your-business-form-instruction-company-number-text="Instructional text for company number"
 your-business-form-label-registered-company-name="Registered company name:"
 your-business-form-instruction-company-name-text="Instructional text for company name"
-your-business-form-label-trading name="Registered company number:"
+your-business-form-label-trading-name="Trading name:"
+your-business-form-instruction-trading-name-text="Instructional text for trading name"
 your-business-form-label-types-of-business="Select your business types from the list below:"
 
 
