Modified translations to add missing progress bar items. Modified layout to add markup for progress bar text. Modifed styling to display progress bar appropraitely. Added images for progress bar items.

--- a/src/module/OlcsSelfserve/config/translations.ini
+++ b/src/module/OlcsSelfserve/config/translations.ini
@@ -5,10 +5,10 @@ progress-bar-type-of-licence=Type of licence
 progress-bar-your-business=Your business
 progress-bar-operating-centres=Operating centres
 progress-bar-transport-managers=Transport managers
-progress-bar-vehicle-safety="Vehicles & safety"
 progress-bar-previous-history=Previous history
+progress-bar-vehicles-safety="Vehicles & safety"
 progress-bar-declaration="Undertakings & declaration"
-progress-bar-payment=Payment
+progress-bar-payment=Payment Details
 progress-bar-summary="Summary & submission"
 layout-footer-support=Support
 layout-footer-cookies=Cookies
