Fixed button layout and text, and merged in button code. OLCS-1020

--- a/src/module/OlcsSelfserve/config/translations.ini
+++ b/src/module/OlcsSelfserve/config/translations.ini
@@ -21,7 +21,7 @@ layout-footer-disclaimer-statement="Hyperlinks are provided for your convenience
 
 ; Generic buttons and messages for forms
 mandatory-fields=Fields marked with * are mandatory
-savenext=Save & Next
+savenext="Save & Next"
 back=Back
 exit=Exit
 
