Amended entityTypes translation to enable pre filling with test data

--- a/src/module/OlcsSelfserve/config/translations.ini
+++ b/src/module/OlcsSelfserve/config/translations.ini
@@ -28,10 +28,10 @@ common-button-cancel=Cancel
 common-button-find=Find
 common-button-add-another=Add another
 common-please-select=Please select
-registered-company=Registered Company
-sole-trader=Sole Trader
+registered-company=Registered company
+sole-trader=Sole trader
 partnership=Partnership
-public-authority=Public Authority
+public-authority=Public authority
 other="Other/Charity/Trust & University"
 pre-selected-sic-code=Pre selected SIC code TO FIX
 your-business-form-label-type-of-business="What type of business are you?"
