Added form fields, translations, and js to amend the view

--- a/src/module/OlcsSelfserve/config/translations.ini
+++ b/src/module/OlcsSelfserve/config/translations.ini
@@ -56,3 +56,7 @@ operator-type=Operator type
 which-operator-location=Which location do you operate out of?
 which-operator-type=What type of operator are you?
 which-licence-type=What type of licence do you want to apply for?
+type-of-trading-business="What is your trade or business? (e.g. haulier, farmer, removal company)"
+trading-business=Trading business
+which-main-business=What is your main business?
+main-occupation=Main occupation
