Added LLP and fixed toggling between entity types

--- a/src/module/OlcsSelfserve/config/translations.ini
+++ b/src/module/OlcsSelfserve/config/translations.ini
@@ -30,6 +30,7 @@ common-button-add-another=Add another
 common-please-select=Please select
 registered-company=Registered company
 sole-trader=Sole trader
+llp=LLP
 partnership=Partnership
 public-authority=Public authority
 other="Other/Charity/Trust & University"
