Fixed composer configs for versions.

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,7 @@
 {
-    "name": "OLCS Self Serve",
+    "name": "olcs/olcs-selfserve",
     "description": "OLCS Self Service Web Site",
-    "repositories": [
-        {
+    "repositories": [{
         "type": "package",
         "package": {
             "name": "olcs/olcs-entities",
@@ -11,10 +10,9 @@
                 "url": "gitolite@git.clb.npm:olcs-entities.git",
                 "type": "git",
                 "reference": "origin/develop"
-                }
             }
-        },
-        {
+        }
+     },{
         "type": "package",
         "package": {
             "name": "olcs/OlcsCommon",
@@ -23,17 +21,16 @@
                 "url": "gitolite@git.clb.npm:olcs-common.git",
                 "type": "git",
                 "reference": "origin/develop"
-                }
             }
         }
-    ],
+    }],
     "require": {
         "php": ">=5.4",
         "phpunit/phpunit": "4.0.*",
         "zendframework/zendframework": "2.2.*",
         "doctrine/doctrine-orm-module": "0.*",
-        "olcs/olcs-entities": "0.1.*",
-        "olcs/OlcsCommon": "0.1.*"
+        "olcs/olcs-entities": "dev-develop",
+        "olcs/OlcsCommon": "dev-develop"
     },
     "autoload" : {
         "psr-4": {
