Fixed URL for gitlab in composer.json

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
             "name": "olcs/olcs-entities",
             "version": "dev-develop",
             "source": {
-                "url": "gitolite@git.clb.npm:olcs-entities.git",
+                "url": "git@gitlab.clb.npm:/olcs/olcs-entities.git",
                 "type": "git",
                 "reference": "origin/develop"
             }
@@ -18,7 +18,7 @@
             "name": "olcs/OlcsCommon",
             "version": "dev-develop",
             "source": {
-                "url": "gitolite@git.clb.npm:olcs-common.git",
+                "url": "git@gitlab.clb.npm:/olcs/olcs-common.git",
                 "type": "git",
                 "reference": "origin/develop"
             }
