Updated composer dependencies and release number: .1

--- a/composer.json
+++ b/composer.json
@@ -1,42 +1,1 @@
-{
-    "name": "olcs/olcs-selfserve",
-    "description": "OLCS Self Service Web Site",
-    "repositories": [{
-        "type": "package",
-        "package": {
-            "name": "olcs/olcs-entities",
-            "version": "dev-develop",
-            "source": {
-                "url": "git@gitlab.clb.npm:/olcs/olcs-entities.git",
-                "type": "git",
-                "reference": "origin/develop"
-            }
-        }
-     },{
-        "type": "package",
-        "package": {
-            "name": "olcs/OlcsCommon",
-            "version": "dev-develop",
-            "source": {
-                "url": "git@gitlab.clb.npm:/olcs/olcs-common.git",
-                "type": "git",
-                "reference": "origin/develop"
-            }
-        }
-    }],
-    "require": {
-        "php": ">=5.4",
-        "phpunit/phpunit": "4.0.*",
-        "zendframework/zendframework": "2.2.*",
-        "doctrine/doctrine-orm-module": "0.*",
-        "olcs/olcs-entities": "dev-develop",
-        "olcs/OlcsCommon": "dev-develop"
-    },
-    "autoload" : {
-        "psr-4": {
-            "OlcsEntities\\": "vendor/olcs/olcs-entities/OlcsEntities/src/OlcsEntities",
-            "Common\\": "vendor/olcs/OlcsCommon/Common/src/Common"
-        }
-    }
-}
-
+{"name":"olcs\/olcs-selfserve","description":"OLCS Self Service Web Site","repositories":[{"type":"package","package":{"name":"olcs\/olcs-entities","version":"release-","source":{"url":"git@gitlab.clb.npm:\/olcs\/olcs-entities.git","type":"git","reference":"origin\/release\/"}}},{"type":"package","package":{"name":"olcs\/OlcsCommon","version":"release-","source":{"url":"git@gitlab.clb.npm:\/olcs\/olcs-common.git","type":"git","reference":"origin\/release\/"}}}],"require":{"php":">=5.4","phpunit\/phpunit":"4.0.*","zendframework\/zendframework":"2.2.*","doctrine\/doctrine-orm-module":"0.*","olcs\/olcs-entities":"dev-develop","olcs\/OlcsCommon":"dev-develop"},"autoload":{"psr-4":{"OlcsEntities\\":"vendor\/olcs\/olcs-entities\/OlcsEntities\/src\/OlcsEntities","Common\\":"vendor\/olcs\/OlcsCommon\/Common\/src\/Common"}}}
