Added in github test key.

--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,8 @@
             "OlcsEntities\\": "vendor/olcs/olcs-entities/OlcsEntities/src/OlcsEntities",
             "Common\\": "vendor/olcs/OlcsCommon/Common/src/Common"
         }
+    },
+    "config": {
+        "github-oauth.github.com": "ab01b01b13c9454d4e5cbbec3bd14b5f7712e568"
     }
 }
-
