Fixed address API endpoint to use live, and removed old stuff from local.php.dist

--- a/config/autoload/local.php.dist
+++ b/config/autoload/local.php.dist
@@ -2,19 +2,10 @@
 
 return array(
     'service_api_mapping' => array(
-        array(
-            'endpoint' => 'http://olcspayment.dev/api/',
-            'apis' => array(
-                'Vosa\Payment\Token' => 'token',
-                'Vosa\Payment\Db' => 'paymentdb',
-                'Vosa\Payment\Card' => 'cardpayment',
-            ),
-        ),
-        array(
-            'endpoint' => 'http://olcs-prototype-be',
-            'apis' => array(
-                'User' => 'user',
-            ),
+        'endpoints' => array(
+            'payments' => 'http://olcspayment.dev/api/',
+            'backend' => 'http://olcs-backend',
+            'postcode' => 'http://sc-address.scdv-ap01.sc.npm/'
         ),
     ),
 );
