--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,13 @@
         }],
     "require": {
         "php": ">=5.4",
-        "phpunit/phpunit": "4.0.*",
         "zendframework/zendframework": "2.3.*",
         "doctrine/doctrine-orm-module": "0.*",
         "olcs/OlcsCommon": "dev-develop"
+    },
+    "require-dev": {
+        "squizlabs/php_codesniffer": "~1.5.3",
+        "phpunit/phpunit": "4.0.*"
     },
     "autoload": {
         "psr-4": {
