--- a/composer.json
+++ b/composer.json
@@ -21,12 +21,14 @@
         "zendframework/zendframework": "2.3.*",
         "doctrine/doctrine-orm-module": "0.*",
         "olcs/OlcsCommon": "dev-develop",
-        "dvsa/jackrabbit": "v1.1.0"
+        "dvsa/jackrabbit": "v1.1.0",
+        "symfony/Filesystem": "~2.6.0-dev"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "~1.5.3",
         "phpunit/phpunit": "4.0.*",
-        "mockery/mockery": "~0.9.2"
+        "mockery/mockery": "~0.9.2",
+        "mikey179/vfsStream": "~1.4.0"
     },
     "autoload": {
         "psr-4": {
