--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "require-dev": {
         "squizlabs/php_codesniffer": "~1.5.3",
         "phpunit/phpunit": "4.0.*",
+        "phpunit/phpcov": "*",
         "mockery/mockery": "~0.9.2",
         "mikey179/vfsStream": "~1.4.0"
     },
