--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,10 @@
         {
             "type": "vcs",
             "url": "git@gitlab.clb.npm:sc/jackrabbit.git"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/MajorCaiger/phpcov.git"
         }
     ],
     "require": {
@@ -21,8 +25,8 @@
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "~1.5.3",
-        "phpunit/phpunit": "4.0.*",
-        "phpunit/phpcov": "*",
+        "phpunit/phpunit": "4.*",
+        "phpunit/phpcov": "dev-master",
         "mockery/mockery": "~0.9.2",
         "mikey179/vfsStream": "~1.4.0"
     },
