Added logging to self serve

--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,10 @@
     "description": "OLCS Self Service Web Site",
     "repositories": [
         {
+            "url": "git@gitlab.clb.npm:olcs/olcs-logging.git",
+            "type": "vcs"
+        },
+        {
             "url": "git@gitlab.clb.npm:olcs/olcs-common.git",
             "type": "vcs"
         },
@@ -16,6 +20,7 @@
         "zendframework/zendframework": "2.3.*",
         "doctrine/doctrine-orm-module": "0.*",
         "olcs/OlcsCommon": "dev-develop",
+        "olcs/olcs-logging": "dev-master",
         "dvsa/jackrabbit": "v1.1.0",
         "symfony/Filesystem": "~2.6.0-dev"
     },
