--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,9 @@
         "dvsa/jackrabbit": "~1.1.1",
         "symfony/Filesystem": "~2.6.0-dev",
         "olcs/autoload": "dev-develop",
-        "cpms/client": "0.1.x-dev"
+        "cpms/client": "0.1.x-dev",
+        "zf-commons/zfc-rbac": "~2.4.0",
+        "zf-commons/zfc-user": "~1.2.2"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "~1.5.3",
