Trailers configuration for the external app.

--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
         "zendframework/zendframework": "2.3.*",
         "doctrine/doctrine-orm-module": "0.*",
         "doctrine/annotations": "1.2.1",
+        "zendframework/zend-developer-tools": "dev-master",
         "olcs/OlcsCommon": "dev-develop",
         "olcs/olcs-logging": "dev-develop",
         "dvsa/jackrabbit": "~1.1.1",
