--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,6 @@
         },
         {
             "type": "vcs",
-            "url": "https://github.com/MajorCaiger/phpcov.git"
-        },
-        {
-            "type": "vcs",
             "url": "git@gitlab.clb.npm:olcs/olcs-autoload.git"
         },
         {
@@ -33,26 +29,24 @@
     ],
     "require": {
         "php": ">=5.4",
-        "zendframework/zendframework": "2.3.*",
-        "doctrine/doctrine-orm-module": "0.*",
-        "doctrine/annotations": "1.2.1",
-        "zendframework/zend-developer-tools": "dev-master",
-        "olcs/OlcsCommon": "dev-develop",
-        "olcs/olcs-logging": "dev-develop",
-        "dvsa/jackrabbit": "~1.1.1",
-        "symfony/Filesystem": "~2.6.0-dev",
-        "olcs/autoload": "dev-develop",
-        "cpms/client": "0.1.x-dev",
+
+        "zendframework/zendframework": "~2.3.5",
+        "doctrine/doctrine-orm-module": "~0.8.0",
+        "doctrine/annotations": "^1.2.1, !=1.2.2",
+        "symfony/Filesystem": "~2.6.0",
         "zf-commons/zfc-rbac": "~2.4.0",
-        "zf-commons/zfc-user": "~1.2.2"
+        "zf-commons/zfc-user": "~1.2.2",
+
+        "dvsa/jackrabbit": "~1.1.2",
+        "cpms/client": "0.1.x-dev",
+        "olcs/autoload": "dev-develop",
+        "olcs/OlcsCommon": "dev-develop",
+        "olcs/olcs-logging": "dev-develop"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "~1.5.3",
-        "phpunit/phpunit": "4.*",
-        "sebastian/diff": "dev-master",
-        "phpunit/phpcov": "dev-master",
-        "mockery/mockery": "0.9.x-dev",
-        "mikey179/vfsstream": "dev-master",
+        "phpunit/phpunit": "^4.0.0",
+        "mockery/mockery": "~0.9.3",
+        "mikey179/vfsstream": "^1.4.0",
         "olcs/olcs-testhelpers": "dev-develop"
     },
     "autoload": {
