--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,13 @@
     "description": "OLCS Self Service Web Site",
     "repositories": [
         {
+            "packagist": false
+        },
+        {
+            "url": "http://satis.inf.mgt.mtpdvsa",
+            "type": "composer"
+        },
+        {
             "url": "git@gitlab.clb.npm:olcs/olcs-logging.git",
             "type": "vcs"
         },
