--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,7 @@
 
         "zendframework/zendframework": "~2.3.5",
         "doctrine/doctrine-orm-module": "~0.8.0",
-        "doctrine/annotations": "^1.2.1, !=1.2.2",
+        "doctrine/annotations": "^1.2.3",
         "symfony/Filesystem": "~2.6.0",
         "zf-commons/zfc-rbac": "~2.4.0",
         "zf-commons/zfc-user": "~1.2.2",
