--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
             "type": "composer"
         },
         {
-            "url": "git@gitlab.clb.npm:olcs/olcs-logging.git",
+            "url": "git@gitlab.inf.mgt.mtpdvsa:olcs/olcs-logging.git",
             "type": "vcs"
         },
         {
-            "url": "git@gitlab.clb.npm:olcs/olcs-common.git",
+            "url": "git@gitlab.inf.mgt.mtpdvsa:olcs/olcs-common.git",
             "type": "vcs"
         },
         {
@@ -23,11 +23,11 @@
         },
         {
             "type": "vcs",
-            "url": "git@gitlab.clb.npm:olcs/olcs-autoload.git"
+            "url": "git@gitlab.inf.mgt.mtpdvsa:olcs/olcs-autoload.git"
         },
         {
             "type": "vcs",
-            "url": "git@gitlab.clb.npm:olcs/olcs-testhelpers.git"
+            "url": "git@gitlab.inf.mgt.mtpdvsa:olcs/olcs-testhelpers.git"
         },
         {
             "type": "vcs",
