--- a/composer.json
+++ b/composer.json
@@ -10,40 +10,34 @@
             "type": "composer"
         },
         {
-            "url": "git@gitlab.clb.npm:olcs/olcs-logging.git",
+            "url": "git@gitlab.inf.mgt.mtpdvsa:olcs/olcs-logging.git",
             "type": "vcs"
         },
         {
-            "url": "git@gitlab.clb.npm:olcs/olcs-common.git",
+            "url": "git@gitlab.inf.mgt.mtpdvsa:olcs/olcs-common.git",
             "type": "vcs"
         },
         {
             "type": "vcs",
-            "url": "git@gitlab.clb.npm:sc/jackrabbit.git"
+            "url": "git@gitlab.inf.mgt.mtpdvsa:sc/jackrabbit.git"
         },
         {
             "type": "vcs",
-            "url": "git@gitlab.clb.npm:olcs/olcs-autoload.git"
+            "url": "git@gitlab.inf.mgt.mtpdvsa:olcs/olcs-autoload.git"
         },
         {
             "type": "vcs",
-            "url": "git@gitlab.clb.npm:olcs/olcs-testhelpers.git"
-        },
-        {
-            "type": "vcs",
-            "url": "git@gitlab.clb.npm:cpms/cpms-client.git"
+            "url": "git@gitlab.inf.mgt.mtpdvsa:olcs/olcs-testhelpers.git"
         }
     ],
     "require": {
         "php": ">=5.4",
-
         "zendframework/zendframework": "~2.3.5",
         "doctrine/doctrine-orm-module": "~0.8.0",
         "doctrine/annotations": "^1.2.3",
         "symfony/Filesystem": "~2.6.0",
         "zf-commons/zfc-rbac": "~2.4.0",
         "zf-commons/zfc-user": "~1.2.2",
-
         "dvsa/jackrabbit": "~1.1.2",
         "cpms/client": "0.1.x-dev",
         "olcs/autoload": "dev-develop",
