--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,10 @@
         {
             "type": "vcs",
             "url": "git@gitlab.inf.mgt.mtpdvsa:olcs/olcs-testhelpers.git"
+        },
+        {
+            "type": "vcs",
+            "url": "git@gitlab.inf.mgt.mtpdvsa:cpms/cpms-client.git"
         }
     ],
     "require": {
