--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         },
         {
             "type": "vcs",
-            "url": "git@gitlab.inf.mgt.mtpdvsa:sc/jackrabbit.git"
+            "url": "git@gitlab.inf.mgt.mtpdvsa:olcs/olcs-document-share.git"
         },
         {
             "type": "vcs",
@@ -46,7 +46,7 @@
         "symfony/Filesystem": "~2.6.0",
         "zf-commons/zfc-rbac": "~2.4.0",
         "zf-commons/zfc-user": "~1.2.2",
-        "dvsa/jackrabbit": "~1.1.2",
+        "olcs/dvsa/document-share": "dev-develop",
         "cpms/client": "0.1.x-dev",
         "olcs/autoload": "dev-develop",
         "olcs/OlcsCommon": "dev-develop",
