--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,10 @@
             "type": "vcs"
         },
         {
+            "url": "git@gitlab.inf.mgt.mtpdvsa:olcs/olcs-utils.git",
+            "type": "vcs"
+        },
+        {
             "type": "vcs",
             "url": "git@gitlab.inf.mgt.mtpdvsa:olcs/olcs-document-share.git"
         },
@@ -46,6 +50,7 @@
         "olcs/autoload": "dev-develop",
         "olcs/OlcsCommon": "dev-develop",
         "olcs/olcs-transfer": "dev-develop",
+        "olcs/olcs-utils": "dev-develop",
         "olcs/olcs-logging": "dev-develop"
     },
     "require-dev": {
