--- a/config/autoload/local.php.dist
+++ b/config/autoload/local.php.dist
@@ -1,15 +1,40 @@
 <?php
 
 return array(
-    'version' => [
-        'environment' => 'Local Dev',
-        'release' => (file_exists(__DIR__ . '/../version') ? file_get_contents(__DIR__ . '/../version') : '')
+    // Debugging, display environment and version on interface
+//    'version' => [
+//        'environment' => 'Local Dev',
+//        'release' => (file_exists(__DIR__ . '/../version') ? file_get_contents(__DIR__ . '/../version') : '')
+//    ],
+
+    // New Backend service
+    'api_router' => [
+        'routes' => [
+            'api' => [
+                'child_routes' => [
+                    'backend' => [
+                        'options' => [
+                            // Backend service URI *Environment specific*
+                            'route' => 'olcs-backend'
+                        ]
+                    ]
+                ]
+            ]
+        ]
     ],
+
+    // Service addresses
     'service_api_mapping' => array(
         'endpoints' => array(
-            'payments' => 'http://olcspayment.dev/api/',
-            'backend' => 'http://olcs-backend',
-            'postcode' => 'http://sc-address.scdv-ap01.sc.npm/'
+            // Backend service URI *Environment specific*
+            'backend' => 'http://olcs-backend/',
+            // Postcode/Address service URI *Environment specific*
+            'postcode' => 'http://postcode.cit.olcs.mgt.mtpdvsa/',
+            // EBSR service URI *Environment specific* (possibly depricated in future releases)
+            'ebsr' => 'http://demo_dvsa-ebsr.web03.olcs.app.mtpdvsa',
         ),
     ),
+
+    // Asset path, URI to olcs-static (CSS, JS, etc) *Environment specific*
+    'asset_path' => 'https://demo-olcs-static.i-env.net',
 );
