--- a/config/autoload/local.php.dist
+++ b/config/autoload/local.php.dist
@@ -24,12 +24,27 @@ return array(
     ],
 
     // Service addresses
+
     'service_api_mapping' => array(
         'endpoints' => array(
-            // Backend service URI *Environment specific*
-            'backend' => 'http://olcs-backend/',
-            // Postcode/Address service URI *Environment specific*
-            'postcode' => 'http://postcode.cit.olcs.mgt.mtpdvsa/',
+            'payments' => [
+                'url' => 'http://olcspayment.dev/api/',
+                'options' => [
+                    'adapter' => \Zend\Http\Client\Adapter\Curl::class,
+                ]
+            ],
+            'backend' => [
+                'url' => 'http://olcs-backend/',
+                'options' => [
+                    'adapter' => \Zend\Http\Client\Adapter\Curl::class,
+                ]
+            ],
+            'postcode' => [
+                'url' => 'http://postcode.cit.olcs.mgt.mtpdvsa/',
+                'options' => [
+                    'adapter' => \Zend\Http\Client\Adapter\Curl::class,
+                ]
+            ],
             // EBSR service URI *Environment specific* (possibly depricated in future releases)
             'ebsr' => 'http://demo_dvsa-ebsr.web03.olcs.app.mtpdvsa',
         ),
