Revert "Updated composer"
This reverts commit 7a12afa2fcac0fc2839061deb61994886f3bb1ab.

--- a/composer.json
+++ b/composer.json
@@ -60,7 +60,7 @@
         "olcs/olcs-devtools": "dev-master"
     },
     "scripts": {
-        "post-update-cmd": [
+        "post-install-cmd": [
             "bash vendor/olcs/olcs-devtools/bin/post-install-cmd.sh"
         ]
     },
